--- a/index.html
+++ b/index.html
@@ -1,113 +1,128 @@
 <!DOCTYPE HTML>
 <!--
-	Lens by HTML5 UP
+	Escape Velocity by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>See by Anne Brown</title>
+		<title>Escape Reality by Anne Brown</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-loading-0 is-loading-1 is-loading-2">
+	<body class="homepage" data-spy="scroll" data-target=".navbar">
+		<div id="page-wrapper">
 
-		<!-- Main -->
-			<div id="main">
+			<!-- Header -->
+				<div id="header-wrapper" class="wrapper">
+					<div id="header">
+							
+						<!-- Logo -->
+							<div id="logo">
+								<h1><a href="index.html">Escape Reality</a></h1>
+								<br>
+								<h2>A site showcasing my photography of the world</h2>
+							</div>
 
-				<!-- Header -->
-					<header id="header">
-						<h1>The world from my eyes</h1>
-						<!--<p>Welcome to my photography site. <a href="http://html5up.net"></a></p>-->
-						<ul class="icons">
-							<li><a href="https://twitter.com/abbrownie" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="linkedin.com/in/annebrownorlando" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="anbrownie1@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-					</header>
+						<!-- Nav -->
+							<nav id="nav">
+								<ul>
+									<li class="current"><a href="#">Home</a></li>
+									<li>
+										<a href="#">Places I've Been</a>
+										<ul>
+											<li><a href="africa.html">South Africa</a></li>
+											<li><a href="europe.html">Belgium</a></li>
+											<li><a href="canada.html">Montreal</a></li>
+											<li><a href="us.html">United States</a></li>
+										</ul>
+									</li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="contact.html">Contact</a></li>
+									
+								</ul>
+							</nav>
 
-				<!-- Thumbnail -->
-					<section id="thumbnails">
-						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/05.jpg" data-position="top center"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
-						</article>
+					</div>
+				</div>
+
+			<!-- Intro -->
+				<div id="intro-wrapper" class="wrapper style1">
+					<div class="title">The Introduction</div>
+					<section id="intro" class="container">
+						<p class="style1">So in case you were wondering what this is all about ...</p>
+						<p class="style2">
+							Escape Reality is a site I created to showcase beautiful photography of the places I have lived<br class="mobile-hide" />
+						<!--<ul class="actions">
+							<li><a href="#" class="button style3 big">Proceed</a></li>
+						</ul>-->
 					</section>
+				</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; Anne Brown 2017</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
-						</ul>
-					</footer>
+			<!-- Main -->
+				<div class="wrapper style2">
+					<div class="title">About Me</div>
+					<div id="main" class="container">
 
-			</div>
+						<!-- Image -->
+							<a href="#" class="image featured">
+								<img src="images/pic01.jpg" alt="" />
+							</a>
+
+						<!-- Features -->
+							<section id="features">
+								<header class="style1">
+									<h2>I have been blessed to have lived in many places throughout the world.</h2>
+									<p>So many people never leave the country they were born in. I'm here to show them what they're missing!</p>
+								</header>
+								<div class="feature-list">
+									<div class="row">
+										<div class="6u 12u(mobile)">
+											<section>
+												<h3 class="icon fa-comment"><a href="africa.html" title="See photos!">South Africa</a></h3>
+												<p>My adventures in South Africa.</p>
+											</section>
+										</div>
+										<div class="6u 12u(mobile)">
+											<section>
+												<h3 class="icon fa-refresh"><a href="europe.html" title="See photos!">Belgium</a></h3>
+												<p>A must see if you're traveling through Europe.</p>
+											</section>
+										</div>
+									</div>
+									<div class="row">
+										<div class="6u 12u(mobile)">
+											<section>
+												<h3 class="icon fa-picture-o"><a href="canada.html" title="See photos!">Montreal</a></h3>
+												<p>From big city to dense woodland and wildlife. Montreal has many untouched areas to see.</p>
+											</section>
+										</div>
+										<div class="6u 12u(mobile)">
+											<section>
+												<h3 class="icon fa-cog"><a href="us.html" title="See photos!">United States</a></h3>
+												<p>So much beauty right in our own backyard.</p>
+											</section>
+			
+										</div>
+									</div>
+									<hr />
+								</div>
+								<div id="copyright">
+									&copy; Anne Brown 2017
+								</div>
+							</div>
+					</div>
 
 		<!-- Scripts -->
+
 			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
+			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
