--- a/index.html
+++ b/index.html
@@ -5,126 +5,126 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Escape Reality by Anne Brown</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body class="homepage" data-spy="scroll" data-target=".navbar">
-		<div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header-wrapper" class="wrapper">
-					<div id="header">
-							
-						<!-- Logo -->
-							<div id="logo">
-								<h1><a href="index.html">Escape Reality</a></h1>
-								<br>
-								<h2>A site showcasing my photography of the world</h2>
-							</div>
+<head>
+	<title>Escape Reality by Anne Brown</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+</head>
 
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li class="current"><a href="#">Home</a></li>
-									<li>
-										<a href="#">Places I've Been</a>
-										<ul>
-											<li><a href="africa.html">South Africa</a></li>
-											<li><a href="europe.html">Belgium</a></li>
-											<li><a href="canada.html">Montreal</a></li>
-											<li><a href="us.html">United States</a></li>
-										</ul>
-									</li>
-									<li><a href="about.html">About</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									
-								</ul>
-							</nav>
+<body class="homepage" data-spy="scroll" data-target=".navbar">
+	<div id="page-wrapper">
 
-					</div>
+		<!-- Header -->
+		<div id="header-wrapper" class="wrapper">
+			<div id="header">
+
+				<!-- Logo -->
+				<div id="logo">
+					<h1><a href="index.html">Escape Reality</a></h1>
+					<br>
+					<h2>*Still under construction* A site showcasing my photography of the world</h2>
 				</div>
 
-			<!-- Intro -->
-				<div id="intro-wrapper" class="wrapper style1">
-					<div class="title">The Introduction</div>
-					<section id="intro" class="container">
-						<p class="style1">So in case you were wondering what this is all about ...</p>
-						<p class="style2">
-							Escape Reality is a site I created to showcase beautiful photography of the places I have lived<br class="mobile-hide" />
-						<!--<ul class="actions">
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="#">Home</a></li>
+						<li>
+							<a href="#">Places I've Been</a>
+							<ul>
+								<li><a href="africa.html">South Africa</a></li>
+								<li><a href="europe.html">Belgium</a></li>
+								<li><a href="canada.html">Montreal</a></li>
+								<li><a href="us.html">United States</a></li>
+							</ul>
+						</li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="contact.html">Contact</a></li>
+
+					</ul>
+				</nav>
+
+			</div>
+		</div>
+
+		<!-- Intro -->
+		<div id="intro-wrapper" class="wrapper style1">
+			<div class="title">The Introduction</div>
+			<section id="intro" class="container">
+				<p class="style1">So in case you were wondering what this is all about ...</p>
+				<p class="style2">
+					Escape Reality is a site I created to showcase beautiful photography of the places I have lived<br class="mobile-hide" />
+					<!--<ul class="actions">
 							<li><a href="#" class="button style3 big">Proceed</a></li>
 						</ul>-->
-					</section>
-				</div>
+			</section>
+		</div>
 
-			<!-- Main -->
-				<div class="wrapper style2">
-					<div class="title">About Me</div>
-					<div id="main" class="container">
+		<!-- Main -->
+		<div class="wrapper style2">
+			<div class="title">About Me</div>
+			<div id="main" class="container">
 
-						<!-- Image -->
-							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
-							</a>
 
-						<!-- Features -->
-							<section id="features">
-								<header class="style1">
-									<h2>I have been blessed to have lived in many places throughout the world.</h2>
-									<p>So many people never leave the country they were born in. I'm here to show them what they're missing!</p>
-								</header>
-								<div class="feature-list">
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-comment"><a href="africa.html" title="See photos!">South Africa</a></h3>
-												<p>My adventures in South Africa.</p>
-											</section>
-										</div>
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-refresh"><a href="europe.html" title="See photos!">Belgium</a></h3>
-												<p>A must see if you're traveling through Europe.</p>
-											</section>
-										</div>
-									</div>
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-picture-o"><a href="canada.html" title="See photos!">Montreal</a></h3>
-												<p>From big city to dense woodland and wildlife. Montreal has many untouched areas to see.</p>
-											</section>
-										</div>
-										<div class="6u 12u(mobile)">
-											<section>
-												<h3 class="icon fa-cog"><a href="us.html" title="See photos!">United States</a></h3>
-												<p>So much beauty right in our own backyard.</p>
-											</section>
-			
-										</div>
-									</div>
-									<hr />
-								</div>
-								<div id="copyright">
-									&copy; Anne Brown 2017
-								</div>
+
+				<!-- Features -->
+				<section id="features">
+					<header class="style1">
+						<h2>I have been blessed to have lived in many places throughout the world.</h2>
+						<p>So many people never leave the country they were born in. I'm here to show them what they're missing!</p>
+					</header>
+					<div class="feature-list">
+						<div class="row">
+							<div class="6u 12u(mobile)">
+								<section>
+									<h3 class="icon fa-picture-o"><a href="africa.html" title="See photos!">South Africa</a></h3>
+									<p>My adventures in South Africa.</p>
+								</section>
 							</div>
+							<div class="6u 12u(mobile)">
+								<section>
+									<h3 class="icon fa-picture-o"><a href="europe.html" title="See photos!">Belgium</a></h3>
+									<p>A must see if you're traveling through Europe.</p>
+								</section>
+							</div>
+						</div>
+						<div class="row">
+							<div class="6u 12u(mobile)">
+								<section>
+									<h3 class="icon fa-picture-o"><a href="canada.html" title="See photos!">Montreal</a></h3>
+									<p>From big city to dense woodland and wildlife. Montreal has many untouched areas to see.</p>
+								</section>
+							</div>
+							<div class="6u 12u(mobile)">
+								<section>
+									<h3 class="icon fa-picture-o"><a href="us.html" title="See photos!">United States</a></h3>
+									<p>So much beauty right in our own backyard.</p>
+								</section>
+
+							</div>
+						</div>
+						<hr />
 					</div>
+					<div id="copyright">
+						&copy; Anne Brown 2017
+					</div>
+			</div>
+		</div>
 
 		<!-- Scripts -->
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/skel-viewport.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/skel-viewport.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
