finished all pages

--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
 							<ul>
 								<li><a href="africa.html">South Africa</a></li>
 								<li><a href="europe.html">Belgium</a></li>
-								<li><a href="canada.html">Montreal</a></li>
+								<li><a href="canada.html">Canada</a></li>
 								<li><a href="us.html">United States</a></li>
 							</ul>
 						</li>
-						<li><a href="#">About</a></li>
+						<!--<li><a href="about.html">About</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 						<!--<li><a href="no-sidebar.html">No Sidebar</a></li>-->
 					</ul>
