--- a/africa.html
+++ b/africa.html
@@ -31,7 +31,7 @@
 								<li><a href="us.html">United States</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">About</a></li>
+						<!--<li><a href="about.html">About</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 
 					</ul>
