--- a/europe.html
+++ b/europe.html
@@ -36,7 +36,7 @@
 								<li><a href="us.html">United States</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">About</a></li>
+						<!--<li><a href="about.html">About</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 
 					</ul>
@@ -129,7 +129,7 @@
 											<h3>Ostende</h3>
 											<p>Ostende is Belgium's most popular beach town. It has shops, restaurants, a wide boardwalk along the beach that spans for miles.</p>
 											<ul class="actions">
-												<li><a href="http://www.visitflanders.com/en/destinations/ostend/?country=en_GB" class="button style1">Visit Ostende</a></li>
+												<li><a href="https://www.lonelyplanet.com/belgium/ostend" class="button style1">Visit Ostende</a></li>
 											</ul>
 										</section>
 									</div>
