--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div id="logo">
 					<h1><a href="index.html">Escape Reality</a></h1>
 					<br>
-					<h2>*Still under construction* A site showcasing my photography of the world</h2>
+					<h2>A site showcasing my photography of the world</h2>
 				</div>
 
 				<!-- Nav -->
@@ -34,11 +34,11 @@
 							<ul>
 								<li><a href="africa.html">South Africa</a></li>
 								<li><a href="europe.html">Belgium</a></li>
-								<li><a href="canada.html">Montreal</a></li>
+								<li><a href="canada.html">Canada</a></li>
 								<li><a href="us.html">United States</a></li>
 							</ul>
 						</li>
-						<li><a href="about.html">About</a></li>
+						<!--<li><a href="about.html">About</a></li>-->
 						<li><a href="contact.html">Contact</a></li>
 
 					</ul>
@@ -91,8 +91,8 @@
 						<div class="row">
 							<div class="6u 12u(mobile)">
 								<section>
-									<h3 class="icon fa-picture-o"><a href="canada.html" title="See photos!">Montreal</a></h3>
-									<p>From big city to dense woodland and wildlife. Montreal has many untouched areas to see.</p>
+									<h3 class="icon fa-picture-o"><a href="canada.html" title="See photos!">Canada</a></h3>
+									<p>From big city to dense woodland and wildlife. Canada has many untouched areas to see.</p>
 								</section>
 							</div>
 							<div class="6u 12u(mobile)">
